server/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: backend-ip
subsets:
  - addresses:
      - ip: 185.187.90.294
    ports:
      - name: viva-backend
        port: 80
        protocol: TCP
