server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: viva_backend
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer
