server/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viva-backend-ingress
  namespace: default
spec:
  rules:
    - host: 185.187.91.14.nip.io
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-service
                port:
                  number: 80
