server/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingres
spec:
  ingressClassName: nginx
  rules:
    - host: 185.187.91.14.nip.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
